--- a/q/74809.html
+++ b/q/74809.html
@@ -26,26 +26,62 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>126</td><td>R</td><td>240411T120014Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/272495#272495">int 21h </a></td></tr>
-<tr d-ix="1"><td>050</td><td>JavaScript Node.js</td><td>230108T103917Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/256480#256480">l4m2</a></td></tr>
-<tr d-ix="2"><td>076</td><td>C GCC</td><td>230108T193147Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/256493#256493">matteo_c</a></td></tr>
-<tr d-ix="3"><td>040</td><td>q/kdb+</td><td>170528T105948Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/123187#123187">mkst</a></td></tr>
-<tr d-ix="4"><td>058</td><td>PHP>=7.1</td><td>170528T132610Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/123201#123201">J&#246;r</a></td></tr>
-<tr d-ix="5"><td>055</td><td>Javascript ES6</td><td>160304T223519Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74814#74814">Qwertiy</a></td></tr>
-<tr d-ix="6"><td>089</td><td>C</td><td>160304T225219Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74816#74816">removed</a></td></tr>
-<tr d-ix="7"><td>050</td><td>Octave</td><td>160304T230207Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74817#74817">Rainer P</a></td></tr>
-<tr d-ix="8"><td>nan</td><td>Perl</td><td>160305T085616Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74838#74838">Andreas </a></td></tr>
-<tr d-ix="9"><td>047</td><td>Python 2</td><td>160305T060117Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74831#74831">xsot</a></td></tr>
-<tr d-ix="10"><td>010</td><td>Seriously</td><td>160304T222245Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74811#74811">user4594</a></td></tr>
-<tr d-ix="11"><td>042</td><td>Haskell</td><td>160304T231631Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74818#74818">nimi</a></td></tr>
-<tr d-ix="12"><td>070</td><td>Python 2</td><td>160305T004915Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74824#74824">Denker</a></td></tr>
-<tr d-ix="13"><td>055</td><td>Retina</td><td>160305T001512Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74822#74822">Digital </a></td></tr>
-<tr d-ix="14"><td>005</td><td>Jelly</td><td>160304T223601Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74815#74815">Martin E</a></td></tr>
-<tr d-ix="15"><td>101</td><td>Julia</td><td>160304T223345Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74813#74813">Alex A.</a></td></tr>
-<tr d-ix="16"><td>009</td><td>CJam</td><td>160304T221955Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74810#74810">Martin E</a></td></tr>
-<tr d-ix="17"><td>011</td><td>Pyth</td><td>160304T222302Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74812#74812">FryAmThe</a></td></tr>
+<tr d-ix="0"><td>006</td><td>05AB1E legacy</td><td>240411T132353Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/272496#272496">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>126</td><td>R</td><td>240411T120014Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/272495#272495">int 21h </a></td></tr>
+<tr d-ix="2"><td>050</td><td>JavaScript Node.js</td><td>230108T103917Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/256480#256480">l4m2</a></td></tr>
+<tr d-ix="3"><td>076</td><td>C GCC</td><td>230108T193147Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/256493#256493">matteo_c</a></td></tr>
+<tr d-ix="4"><td>040</td><td>q/kdb+</td><td>170528T105948Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/123187#123187">mkst</a></td></tr>
+<tr d-ix="5"><td>058</td><td>PHP>=7.1</td><td>170528T132610Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/123201#123201">J&#246;r</a></td></tr>
+<tr d-ix="6"><td>055</td><td>Javascript ES6</td><td>160304T223519Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74814#74814">Qwertiy</a></td></tr>
+<tr d-ix="7"><td>089</td><td>C</td><td>160304T225219Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74816#74816">removed</a></td></tr>
+<tr d-ix="8"><td>050</td><td>Octave</td><td>160304T230207Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74817#74817">Rainer P</a></td></tr>
+<tr d-ix="9"><td>nan</td><td>Perl</td><td>160305T085616Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74838#74838">Andreas </a></td></tr>
+<tr d-ix="10"><td>047</td><td>Python 2</td><td>160305T060117Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74831#74831">xsot</a></td></tr>
+<tr d-ix="11"><td>010</td><td>Seriously</td><td>160304T222245Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74811#74811">user4594</a></td></tr>
+<tr d-ix="12"><td>042</td><td>Haskell</td><td>160304T231631Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74818#74818">nimi</a></td></tr>
+<tr d-ix="13"><td>070</td><td>Python 2</td><td>160305T004915Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74824#74824">Denker</a></td></tr>
+<tr d-ix="14"><td>055</td><td>Retina</td><td>160305T001512Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74822#74822">Digital </a></td></tr>
+<tr d-ix="15"><td>005</td><td>Jelly</td><td>160304T223601Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74815#74815">Martin E</a></td></tr>
+<tr d-ix="16"><td>101</td><td>Julia</td><td>160304T223345Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74813#74813">Alex A.</a></td></tr>
+<tr d-ix="17"><td>009</td><td>CJam</td><td>160304T221955Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74810#74810">Martin E</a></td></tr>
+<tr d-ix="18"><td>011</td><td>Pyth</td><td>160304T222302Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74812#74812">FryAmThe</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>137</s> 126 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>u‚ζ€àl
+</code></pre>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/74810/52210"><em>@MartinEnder</em>'s CJam answer</a></p>
+<p>Input as two loose strings; output as a list of characters.</p>
+<p><a href="https://tio.run/##MzBNTDJM/f@/9FHDrHPbHjWtObwg5///RD0gSOLS00sG0gA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##MzBNTDJM/V9Waa@k8KhtkoKSfWVC8f/SRw2zzm171LTm8IKc/146/6OjlRL1gCBJSUdJTy8ZyFKK1YGKIQSxiYEBTAIiqpcM4YMBUCQJDCBiSXpABBLTA0EkAyGagTpjAQ" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>u       # Uppercase the first (implicit) input-string
+ ‚      # Pair it together with the second (implicit) input-string
+  ζ     # Zip/transpose; swapping rows/columns,
+        # implicitly using &quot; &quot; as filler for unequal length strings
+   €    # Map over each pair:
+    à   #  Leave its maximum, based on the codepoint of the character
+     l  # Convert each character back to lowercase
+        # (after which the resulting character-list is output implicitly)
+</code></pre>
+<p>Uses <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">the legacy version of 05AB1E</a>, because the min/max builtins work on characters based on codepoints.<br />
+<strong>In <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">the new version of 05AB1E</a>, <s>this would have been 7 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></s> it's 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a> as well with I/O as character lists<sup><em>†</em></sup>:</strong></p>
+<pre class="lang-python prettyprint-override"><code>uζε{θl
+</code></pre>
+<p>Two loose inputs as a list of characters; output as a list of characters as well.</p>
+<p><a href="https://tio.run/##yy9OTMpM/f@/9Ny2c1urz@3I@f8/WilRSUdJDw0nKcVyRcN5ySiysQA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfeWjpjXBCcX/S89tO7e1@tyOnP@1Xjr/o6OVEvWAIElJR0lPLxnIUorVgYohBLGJgQFMAiKqlwzhgwFQJAkMIGJJekAEEtMDQSQDIZqBOmMB" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+<pre class="lang-python prettyprint-override"><code>u       # Uppercase the characters of the first (implicit) input-list
+ ζ      # Zip/transpose it with the second (implicit) input-list; swapping rows/columns,
+        # implicitly using &quot; &quot; as filler for unequal length strings
+  ε     # Map over each pair:
+   {    #  Sort its characters from lowest to highest based on codepoints
+    θ   #  Pop and leave the last/highest character
+     l  #  Convert this character to lowercase
+        # (after which the resulting character-list is output implicitly)
+</code></pre>
+<p><sup><em>†: With inputs as strings, it would use the uppercased first input as filler explicit filler instead of the implicit space, and will zip the second input with itself.</em></sup></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>137</s> 126 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(a,b,`!`=nchar,y=`if`((!b)&gt;!a,c(a,b),c(b,a)),x=strsplit(y,&quot;&quot;))Reduce(paste0,Map(max,names(Map(c,el(x),u&lt;-x[[2]])),u,na.rm=T))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=RY5NCsIwEIX33qJZzcA0iCsR4w3ciLtayCSmWGhL6Q-kGy_ipgoeytuY0oqzeW--B4_3eDbjK1Pvvsvi7ed-ASZDOtKqsjduaFA6zzRAZPAQMdkpxiCGGJG8arumrYu8g4GEQDy5a28d1Nx2bk1HrqFkTxWXroXps-QK8Ej9PvZJsknTUNKHXDalOiMuK3YZCJbhjCAhpQ1O4OoHF25nZIP946VhHGf9Ag" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -59,19 +95,19 @@
 <li><code>el(x)</code>, 5 bytes instead of <code>x[[1]]</code>, 6 bytes.</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([a,...b],[c,...d])=&gt;a+c?(c&gt;'.'?c:a||c)+f(b,d):d
 </code></pre>
 <p><a href="https://tio.run/##RY9BDoIwEEX3PUV3tAEHdakpJF6jkjgdwGAqJZS48u5YKOprk/n582eaPvCFnsZumHa9q5t5bpXQmAGAqTJNi6grqQpMqRRUJJCUdML3m2TaCpPV8lTP5xtDWCY4AIXKV3DRhuEKNyuxEzVDA@FyA8v5dYIVt60LiW/Q12LEt8f@RIPdwA@2m0Ry7RMJbWenZhQX52yDvYQnDsKrwm@h/OrTXEYbVUGu9yEI1t1FK1Dvqwz1IfxcoT5WUrL5Aw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C (GCC)</a>, <s>86</s> 76 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C (GCC)</a>, <s>86</s> 76 bytes</h1>
 <p><em>-10 bytes thanks to <a href="https://codegolf.stackexchange.com/users/52904/ceilingcat">@ceilingcat</a></em></p>
 <pre class="lang-c prettyprint-override"><code>f(x,y)char*x,*y;{for(;*x|*y;putchar(0[y=*y?y:x]-46?*y:*x),x++,y++)x=*x?x:y;}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=TU9RasMwDP22T6EFBo7jmBTGKAkhF9gNujIcs6yBLS1JyuR1vcdgP_npoXqbyV4yJsu8Z_np2fq-2KcXa6fpchybdH19aAQqF9ud6SUq6YpTs-9FIfGT-OE4-guRbVwpXeVy3KZ395V0ucRYYZIolyQxlhIrzF1xnj2_2m6EN9N2IoYTZ94CcLPKsq0CN-NHwIIzzt537esziMGarhHR7QAhIwVIclLGcFNCugpe7NCTeZA9jsv-JyVD5icCFygNMIgo8vzM-Py_6dobTVGD1pYQjIeamxBQh5iBm1pTQq398kU68dAeHCzYhc_VxVX_OVOj1r9P_wA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1>q/kdb+, <s>43</s> 40 bytes</h1>
+<div id="pu4" class="pu"><h1>q/kdb+, <s>43</s> 40 bytes</h1>
 
 <p><strong>Solution:</strong></p>
 
@@ -97,14 +133,14 @@ lower{...}          // convert result of function to lowercase
 <p><strong>Notes:</strong>
 I'm taking taking advantage of <em>"Given two non-empty <strong>strings</strong>"</em> and assuming that inputs are strings. In kdb <code>"c"</code> is an atom, <code>(),"c"</code> is a string, otherwise need to add 6 bytes to the score, as we cannot use <code>$</code> to pad an atom...</p>
 </div>
-<div id="pu4" class="pu"><h1>PHP>=7.1, 58 Bytes</h1>
+<div id="pu5" class="pu"><h1>PHP>=7.1, 58 Bytes</h1>
 
 <pre class="lang-php prettyprint-override"><code>for([,$x,$y]=$argv;~$c=$y[$i++];)$c&lt;_?:$x[$i-1]=$c;echo$x;
 </code></pre>
 
 <p><a href="http://sandbox.onlinephpfunctions.com/code/e1e60f860f4e7a5cea314496f5abfb3f7c09a3c3" rel="nofollow noreferrer">Online Version</a></p>
 </div>
-<div id="pu5" class="pu"><h1>Javascript ES6, <s>52</s> 55 chars</h1>
+<div id="pu6" class="pu"><h1>Javascript ES6, <s>52</s> 55 chars</h1>
 
 <pre><code>(a,b)=&gt;b.replace(/\./g,(m,i)=&gt;a[i]||m)+a.slice(b.length)
 </code></pre>
@@ -121,16 +157,16 @@ c a....b           a....b
 `.split('\n').filter(Boolean).map(s=&gt;s.split(/\s+/)).every(a=&gt;f(a[0],a[1])==a[2])
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1>C, <s>106</s> 89 bytes</h1>
+<div id="pu7" class="pu"><h1>C, <s>106</s> 89 bytes</h1>
 <pre><code>i,j,k;f(s,z)char*s,*z;{for(i=0,j=k=1;j|k;i++)putchar((k=k?z[i]:0)&gt;46|!(j=j?s[i]:0)?k:j);}
 </code></pre>
 <p>Test live on <a href="http://ideone.com/qeMuFK" rel="nofollow noreferrer"><strong>ideone</strong></a>.</p>
 </div>
-<div id="pu7" class="pu"><h1>Octave, 50 bytes</h1>
+<div id="pu8" class="pu"><h1>Octave, 50 bytes</h1>
 <pre><code>function c=m(a,b)c=b;c(a&gt;0)=a;i=b&gt;46;c(i)=b(i);end
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1>Perl, 48 + 3 = 51 bytes</h1>
+<div id="pu9" class="pu"><h1>Perl, 48 + 3 = 51 bytes</h1>
 
 <pre><code>s/\./substr($^I,$.=pos,1)||$&amp;/ge;$_.=substr$^I,$.
 </code></pre>
@@ -142,12 +178,12 @@ Requires <code>-pl</code> and takes input from <code>stdin</code> and <code>-i</
 a.b.de..f
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h1>Python 2, 47 bytes</h1>
+<div id="pu10" class="pu"><h1>Python 2, 47 bytes</h1>
 
 <pre><code>lambda s,t:`map(max,s.upper(),t)`[2::5].lower()
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h2>Seriously, 10 bytes</h2>
+<div id="pu11" class="pu"><h2>Seriously, 10 bytes</h2>
 <pre><code>,û,Z`M`MΣù
 </code></pre>
 <p><a href="http://seriously.tryitonline.net/#code=LMO7LFpgTWBNzqPDuQ&amp;input=J2FiLmFiLicKJ2IuYi5iLic" rel="nofollow noreferrer">Try it online!</a></p>
@@ -160,7 +196,7 @@ a.b.de..f
         Σù  join and uppercase
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h2>Haskell, <s>43</s> 42 bytes</h2>
+<div id="pu12" class="pu"><h2>Haskell, <s>43</s> 42 bytes</h2>
 
 <pre><code>(a:b)#(c:d)|c&lt;'a'=a:b#d|1&lt;2=c:b#d
 a#b=a++b
@@ -177,7 +213,7 @@ a#b=a++b
 
 <p>Edit: @Lynn saved a byte. Thanks!</p>
 </div>
-<div id="pu12" class="pu"><h1>Python 2, 70 bytes</h1>
+<div id="pu13" class="pu"><h1>Python 2, 70 bytes</h1>
 <pre><code>lambda x,y:&quot;&quot;.join([k if k!=&quot;.&quot;and k else j for j,k in map(None,x,y)])
 </code></pre>
 <p><a href="https://repl.it/BtHT/3" rel="nofollow noreferrer">Try it here!</a></p>
@@ -185,7 +221,7 @@ a#b=a++b
 Then we iterate over this list with <code>j</code> being the character from the first string and <code>k</code> the one from the second string. We choose <code>k</code> if it's not a dot and otherwise <code>j</code>.</p>
 <p>This could be 61 bytes if I could output the result as list of characters instead of a string.</p>
 </div>
-<div id="pu13" class="pu"><h1><a href="http://github.com/mbuettner/retina" rel="nofollow noreferrer">Retina</a>, 55</h1>
+<div id="pu14" class="pu"><h1><a href="http://github.com/mbuettner/retina" rel="nofollow noreferrer">Retina</a>, 55</h1>
 <pre>
 $
  
@@ -204,7 +240,7 @@ t
 s/ *//
 </code></pre>
 </div>
-<div id="pu14" class="pu"><h2><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 5 bytes</h2>
+<div id="pu15" class="pu"><h2><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 5 bytes</h2>
 
 <pre><code>Œu»Œl
 </code></pre>
@@ -222,7 +258,7 @@ s/ *//
    Œl  # Convert result back to lower case.
 </code></pre>
 </div>
-<div id="pu15" class="pu"><h1>Julia, 101 bytes</h1>
+<div id="pu16" class="pu"><h1>Julia, 101 bytes</h1>
 
 
 
@@ -233,7 +269,7 @@ s/ *//
 
 <p>We compute <code>m</code> as the maximum length of the two inputs, then define a function <code>r</code> that right pads its input with <code>.</code>s to length <code>m</code> and store that as a function argument. We then <code>zip</code> the right padded inputs and check the minimum (as defined by the ASCII code) of each pair. If it's a <code>.</code>, we use whichever character has the bigger code, otherwise we use whichever came from the second input. The resulting array is <code>join</code>ed into a string and returned.</p>
 </div>
-<div id="pu16" class="pu"><h2>CJam, 9 bytes</h2>
+<div id="pu17" class="pu"><h2>CJam, 9 bytes</h2>
 
 <pre><code>leul.e&gt;el
 </code></pre>
@@ -274,7 +310,7 @@ l    e# Read second line.
 el   e# Convert back to lower case.
 </code></pre>
 </div>
-<div id="pu17" class="pu"><h1>Pyth, 11</h1>
+<div id="pu18" class="pu"><h1>Pyth, 11</h1>
 
 <pre><code>smenD\.d.TQ
 </code></pre>
