--- a/q/230438.html
+++ b/q/230438.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>099</td><td>YASEPL</td><td>240405T161347Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/272360#272360">madeforl</a></td></tr>
+<tr d-ix="0"><td>079</td><td>YASEPL</td><td>240405T161347Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/272360#272360">madeforl</a></td></tr>
 <tr d-ix="1"><td>028</td><td>Easyfuck</td><td>240330T181757Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/272203#272203">Quadrupl</a></td></tr>
 <tr d-ix="2"><td>052</td><td>Uiua</td><td>231018T064754Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/266073#266073">Matthew </a></td></tr>
 <tr d-ix="3"><td>345</td><td>PowerShell</td><td>231017T131550Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/266047#266047">Mark Har</a></td></tr>
@@ -64,10 +64,10 @@
 <tr d-ix="35"><td>245</td><td>HTML</td><td>210626T161502Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/230557#230557">user</a></td></tr>
 <tr d-ix="36"><td>164</td><td>TikZ</td><td>210626T160602Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/230556#230556">Wheat Wi</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/madeforlosers/YASEPL-esolang/blob/main/README.md" rel="nofollow noreferrer">YASEPL</a>, 99 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/madeforlosers/YASEPL-esolang/blob/main/README.md" rel="nofollow noreferrer">YASEPL</a>, <s>99 97</s> 79 bytes</h1>
 <p>I'm not sure if this counts, but it still does make a pride flag</p>
 <p>it uses ANSI because YASEPL doesn't support image creating (..yet)</p>
-<pre><code>=i£1©196©214©226©46©26©129`1=h$27›¥i,1#openbracket#48#semicolon#5#semicolon#h#&quot;m&quot;=a;&quot; &quot;,40&lt;&lt;!+}2,6
+<pre><code>=i£1©196©214©226©46©26©129`1=h$27›¥i,1!q$91›#48$59›#5›#h#&quot;m&quot;;&quot; &quot;,40&lt;&lt;!+}2,6
 </code></pre>
 <p><a href="https://i.stack.imgur.com/fh51u.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/fh51u.png" alt="image of pride flag in console with ANSI" /></a></p>
 </div>
