--- a/q/74809.html
+++ b/q/74809.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>126</td><td>R</td><td>240411T120014Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/272495#272495">int 21h </a></td></tr>
-<tr d-ix="1"><td>006</td><td>05AB1E legacy</td><td>240411T132353Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/272496#272496">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>050</td><td>JavaScript Node.js</td><td>230108T103917Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/256480#256480">l4m2</a></td></tr>
+<tr d-ix="0"><td>049</td><td>JavaScript Node.js</td><td>230108T103917Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/256480#256480">l4m2</a></td></tr>
+<tr d-ix="1"><td>126</td><td>R</td><td>240411T120014Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/272495#272495">int 21h </a></td></tr>
+<tr d-ix="2"><td>006</td><td>05AB1E legacy</td><td>240411T132353Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/272496#272496">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>076</td><td>C GCC</td><td>230108T193147Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/256493#256493">matteo_c</a></td></tr>
 <tr d-ix="4"><td>040</td><td>q/kdb+</td><td>170528T105948Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/123187#123187">mkst</a></td></tr>
 <tr d-ix="5"><td>058</td><td>PHP>=7.1</td><td>170528T132610Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/123201#123201">J&#246;r</a></td></tr>
@@ -46,8 +46,14 @@
 <tr d-ix="17"><td>009</td><td>CJam</td><td>160304T221955Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74810#74810">Martin E</a></td></tr>
 <tr d-ix="18"><td>011</td><td>Pyth</td><td>160304T222302Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74812#74812">FryAmThe</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>137</s> 126 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>\(a,b,`!`=nchar,y=`if`((!b)&gt;!a,c(a,b),c(b,a)),x=strsplit(y,&quot;&quot;)),Reduce(paste0,Map(max,names(Map(c,el(x),u&lt;-x[[2]])),u,na.rm=T))
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 49 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=([a,...b],[c,...d])=&gt;a+c?(c&gt;{}?c:a||c)+f(b,d):d
+</code></pre>
+<p><a href="https://tio.run/##RY9NDoIwEIX3PUV3tAHHnyWmkHiNSuJ0AINBSihxo54dC0X92mRe3ryZpjd8oKOh6cdNZ8tqmmolNCYAYIpE0yzKQqoMY8oFZc93Tim@XiTjWpiklGk5HS8MYR7gAOQrX8BZG4YL3CyETtAMDfjLDczn1/FW2LYsJL5CX4sRXx/7Ewx2Ade3zSiicxdJqJt2rAZxsratsJNwx144lbk1tD27eCuDjSoj2zkfhNZeRS1Q74oE9d5/XKE@FFKy6QM" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>137</s> 126 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>\(a,b,`!`=nchar,y=`if`((!b)&gt;!a,c(a,b),c(b,a)),x=strsplit(y,&quot;&quot;))Reduce(paste0,Map(max,names(Map(c,el(x),u&lt;-x[[2]])),u,na.rm=T))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=RY5NCsIwEIX33qJZzcA0iCsR4w3ciLtayCSmWGhL6Q-kGy_ipgoeytuY0oqzeW--B4_3eDbjK1Pvvsvi7ed-ASZDOtKqsjduaFA6zzRAZPAQMdkpxiCGGJG8arumrYu8g4GEQDy5a28d1Nx2bk1HrqFkTxWXroXps-QK8Ej9PvZJsknTUNKHXDalOiMuK3YZCJbhjCAhpQ1O4OoHF25nZIP946VhHGf9Ag" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>My answer to this challenge is the largest one because R has default vector recycling. The code's key piece is the call <code>Map(max,a,b)</code>, where <code>a</code> and <code>b</code> are characters vectors. This outputs the list of characters with a larger value - similar to the other solutions here.</p>
@@ -65,7 +71,7 @@
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=RY7NCoJAFIX3PYXOai7chmoVxrxEtDPBcX7IUJNxhCHxSdpY0EP1Nika3c35-A4c7uNph5fh79aZ9f5zP1OBGaZhyit5ERY9b5xt6iJ3VE4VICGAinc9dOZm6TXIq2AblcLTUGCYASh-1KqVmtaicXqDkiqcal1QD_E1QR_HuySZqBLMlvwEAAfVLx9EhhLBxssIEsbkSARWP7l4OSs54l_DvDAMc34B" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>u‚ζ€àl
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/74810/52210"><em>@MartinEnder</em>'s CJam answer</a></p>
@@ -99,12 +105,6 @@
         # (after which the resulting character-list is output implicitly)
 </code></pre>
 <p><sup><em>†: With inputs as strings, it would use the uppercased first input as filler explicit filler instead of the implicit space, and will zip the second input with itself.</em></sup></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>f=([a,...b],[c,...d])=&gt;a+c?(c&gt;'.'?c:a||c)+f(b,d):d
-</code></pre>
-<p><a href="https://tio.run/##RY9BDoIwEEX3PUV3tAEHdakpJF6jkjgdwGAqJZS48u5YKOprk/n582eaPvCFnsZumHa9q5t5bpXQmAGAqTJNi6grqQpMqRRUJJCUdML3m2TaCpPV8lTP5xtDWCY4AIXKV3DRhuEKNyuxEzVDA@FyA8v5dYIVt60LiW/Q12LEt8f@RIPdwA@2m0Ry7RMJbWenZhQX52yDvYQnDsKrwm@h/OrTXEYbVUGu9yEI1t1FK1Dvqwz1IfxcoT5WUrL5Aw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C (GCC)</a>, <s>86</s> 76 bytes</h1>
 <p><em>-10 bytes thanks to <a href="https://codegolf.stackexchange.com/users/52904/ceilingcat">@ceilingcat</a></em></p>
