--- a/q/272425.html
+++ b/q/272425.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>006</td><td>Combinator Logic</td><td>240411T232323Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272509#272509">arutonee</a></td></tr>
-<tr d-ix="1"><td>014</td><td>Lambda Calculus with Church Numerals</td><td>240411T231037Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272508#272508">arutonee</a></td></tr>
-<tr d-ix="2"><td>013</td><td>PowerShell Core</td><td>240411T213246Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272503#272503">Julian</a></td></tr>
-<tr d-ix="3"><td>013</td><td>TIBASIC</td><td>240411T182720Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272500#272500">Sylveste</a></td></tr>
+<tr d-ix="0"><td>012</td><td>TIBASIC</td><td>240411T182720Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272500#272500">Sylveste</a></td></tr>
+<tr d-ix="1"><td>006</td><td>Combinator Logic</td><td>240411T232323Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272509#272509">arutonee</a></td></tr>
+<tr d-ix="2"><td>014</td><td>Lambda Calculus with Church Numerals</td><td>240411T231037Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272508#272508">arutonee</a></td></tr>
+<tr d-ix="3"><td>013</td><td>PowerShell Core</td><td>240411T213246Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272503#272503">Julian</a></td></tr>
 <tr d-ix="4"><td>010</td><td>BitCycle u</td><td>240411T074512Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272491#272491">Aiden Ch</a></td></tr>
 <tr d-ix="5"><td>004</td><td>Brachylog</td><td>240411T144815Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272499#272499">Fatalize</a></td></tr>
 <tr d-ix="6"><td>nan</td><td>Piet + asciipiet</td><td>240411T074853Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272492#272492">Aiden Ch</a></td></tr>
@@ -63,9 +63,18 @@
 <tr d-ix="34"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
 <tr d-ix="35"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Combinator Logic, 6 bytes</h1>
+<div id="pu0" class="pu"><h1>TI-BASIC, <s>13</s> 12 bytes</h1>
+<p>Thanks to <a href="https://codegolf.stackexchange.com/users/94076/kai-burghardt">@KaiBurghardt</a> for reducing by one byte.</p>
+<pre><code>seq(X&lt;Ans,X,0,Ans,1
+</code></pre>
+<p>This creates a list with the correct number of 1's and 0's. The byte count is subtracting any bytes that are present in an empty program. To find the byte count, I looked at the memory stats on the calculator. See <a href="https://codegolf.meta.stackexchange.com/questions/1541/how-to-score-ti-basic">how to score TI-BASIC</a> for more information.</p>
+<p>The input is in the form of the <code>Ans</code> variable, which needs to be set before running the program. Here is an example of input and output on the TI-84 Plus CE:</p>
+<p><a href="https://i.stack.imgur.com/fSqth.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/fSqth.png" alt="enter image description here" /></a></p>
+</div>
+<div id="pu1" class="pu"><h1>Combinator Logic, 6 bytes</h1>
 <pre><code>V(V1)0
 </code></pre>
+<p>where <code>V=\abc.cab</code></p>
 <p>This expands to</p>
 <pre><code>(\abc.cab)((\xyz.zxy)1)0
 =\c.c(\yz.z1y)0
@@ -73,7 +82,7 @@
 </code></pre>
 <p>See <a href="https://codegolf.stackexchange.com/a/272508/117227">my other answer</a> for an explanation of the lambda calculus.</p>
 </div>
-<div id="pu1" class="pu"><h1>Lambda Calculus (with Church Numerals), 14 bytes</h1>
+<div id="pu2" class="pu"><h1>Lambda Calculus (with Church Numerals), 14 bytes</h1>
 <pre><code>\a.a(\fx.x1f)0
 </code></pre>
 <p>This is a reduction of</p>
@@ -84,7 +93,7 @@
 </code></pre>
 <p>The output is a Church-encoded list.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 13 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 13 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>,1*&quot;$input&quot;
 0
@@ -95,16 +104,6 @@ Uses the <code>$input</code> variable to access <code>stdin</code></p>
 <pre class="lang-powershell prettyprint-override"><code>,1*&quot;$input&quot; # generate an array of 1 of the size of $input and print it
 0           # print a zero
 </code></pre>
-</div>
-<div id="pu3" class="pu"><h1>TI-BASIC, 13 bytes</h1>
-<pre><code>For(Y,1,Z
-Disp 1
-End
-0
-</code></pre>
-<p>This is just a basic loop that prints <code>1</code> the correct number of times, and then prints <code>0</code>. The byte count is subtracting any bytes that are present in an empty program. To find the byte count, I looked at the memory stats on the calculator. See <a href="https://codegolf.meta.stackexchange.com/questions/1541/how-to-score-ti-basic">how to score TI-BASIC</a> for more information.</p>
-<p>Since the input can be in any format, I choose the input to be in the variable <code>Z</code>. Here is an example on a TI-84 Plus CE:</p>
-<p><a href="https://i.stack.imgur.com/sRc3Y.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/sRc3Y.png" alt="Demonstration of the input and output on the calculator screen" /></a></p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://github.com/dloscutoff/esolangs/tree/master/BitCycle" rel="nofollow noreferrer">BitCycle</a> <code>-u</code>, 10 bytes</h1>
 <pre><code>?~
