--- a/q/272425.html
+++ b/q/272425.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>012</td><td>Ruby</td><td>240412T054737Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272514#272514">G B</a></td></tr>
-<tr d-ix="1"><td>020</td><td>PARI/GP</td><td>240412T023256Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272511#272511">alephalp</a></td></tr>
+<tr d-ix="0"><td>012</td><td>PARI/GP</td><td>240412T023256Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272511#272511">alephalp</a></td></tr>
+<tr d-ix="1"><td>012</td><td>Ruby</td><td>240412T054737Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272514#272514">G B</a></td></tr>
 <tr d-ix="2"><td>012</td><td>TIBASIC</td><td>240411T182720Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272500#272500">Sylveste</a></td></tr>
 <tr d-ix="3"><td>006</td><td>Combinator Logic</td><td>240411T232323Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272509#272509">arutonee</a></td></tr>
 <tr d-ix="4"><td>014</td><td>Lambda Calculus with Church Numerals</td><td>240411T231037Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272508#272508">arutonee</a></td></tr>
@@ -65,16 +65,23 @@
 <tr d-ix="36"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
 <tr d-ix="37"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 12 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 12 bytes</h1>
+<pre><code>n-&gt;10^n\9*10
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMHiNAXbpaUlaboWa_J07QwN4vJiLLUMDSBCN7UTCwpyKjXyFHTtFAqKMvNKgEwlEEdJIU0jT1NTRyHaQEfBSEfBNFYTomXBAggNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>A function.</p>
+<hr />
+<h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 20 bytes</h1>
+<pre><code>print(10^input\9*10)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGCpaUlaboWWwqKMvNKNAwN4jLzCkpLYiy1DA00IVJQFQsWmkIYAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>A full program.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 12 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{?1*n+?0}
 </code></pre>
 <p><a href="https://tio.run/##KypNqvyfZvtf1y6v2t5QK0/b3qD2f0FpSbFCWrRp7H8A" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 20 bytes</h1>
-<pre><code>print(10^input\9*10)
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGCpaUlaboWWwqKMvNKNAwN4jLzCkpLYiy1DA00IVJQFQsWmkIYAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1>TI-BASIC, <s>13</s> 12 bytes</h1>
 <p>Thanks to <a href="https://codegolf.stackexchange.com/users/94076/kai-burghardt">@KaiBurghardt</a> for reducing by one byte.</p>
