--- a/q/204068.html
+++ b/q/204068.html
@@ -80,7 +80,7 @@ Saturday -&gt; 59
 Sunday -&gt; 61
 </code></pre>
 <p>Then uses <code>qsort</code> to sort the array.</p>
-<p><strong>Previous solution</strong></p>
+<h2>Previous solution</h2>
 <h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <sup><s>72</s></sup> 70 bytes</h1>
 <p>Saved 2 bytes thanks to gastropner!!!</p>
 
